# game-sales

./: LICENSE.txt  README.md  pyproject.toml  tutorial.md
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb  tutorial-checkpoint.md
datasets/: games.csv
game-sales/: README.md  pyproject.toml  tutorial.md
game-sales/src/game_sales/: __init__.py  data_discovery.py
game-sales/tests/: __init__.py
src/game_sales/: __about__.py  data_preprocessing.py  top_five.py
