[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-sales"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bagrinn96", email = "nazarovapt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Bagrinn96/game-sales#readme"
Issues = "https://github.com/Bagrinn96/game-sales/issues"
Source = "https://github.com/Bagrinn96/game-sales"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/game_sales tests}"

[tool.coverage.run]
source_pkgs = ["game_sales", "tests"]
branch = true
parallel = true
omit = [
  "src/game_sales/__about__.py",
]

[tool.coverage.paths]
game_sales = ["src/game_sales", "*/game-sales/src/game_sales"]
tests = ["tests", "*/game-sales/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
